# pyalarmdotcomajax

./: .codespellrc  .deepsource.toml  .devcontainer.json  .flake8  .gitignore  .pre-commit-config.yaml  .prettierignore  .prettierrc  .taplo.toml  .yamllint  CHANGES  CHANGES.md  CHANGES.txt  README.md  consolidated-endpoints.txt  device_types.md  package-lock.json  package.json  pyalarmdotcomajax.code-workspace  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  setup.py  websocket-sandbox.py
.devcontainer/: devcontainer.json
.github/workflows/: code-coverage.yml  codeql-analysis.yml  dependency-review.yml  pytest-and-code-coverage.yml  python-publish.yml
api-resources/: ajax_response_http_codes.js  base_device_attribute_descriptions.md  consolidated-endpoints.txt  device_attribute_descriptions.md  icons.js  make_model_id.js  managed_device_type.js  panel_type.js  trouble_conditions.js  websocket.md
api-resources/individual-device-type-endpoints/: dealer_ok.json  sensors_ok.json
docs/: cli.md  conf.py  index.rst
docs/api/: pyalarmdotcomajax.controllers.rst  pyalarmdotcomajax.models.jsonapi.rst  pyalarmdotcomajax.models.rst  pyalarmdotcomajax.rst  pyalarmdotcomajax.websocket.rst
examples/: basic_sensor_data.py  disarm_all_alarms.py  get_sensor_data.py  tfa_totp.py  websocket-monitor.py  websocket_monitor.py
pyalarmdotcomajax/: __init__.py  __main__.py  _version.py  cli.py  const.py  device_make_model_db.csv  device_type_db.csv  devices.py  entities.py  errors.py  events.py  exceptions.py  extensions.py  helpers.py  old__init__.py  pyalarmdotcomajax.py  sandbox.py  util.py  version.py  ws.py
pyalarmdotcomajax-OLD/: __init__.py  cli.py  const.py  extensions.py
pyalarmdotcomajax-OLD/devices/: camera.py  garage_door.py  partition.py  registry.py  scene.py  sensor.py
pyalarmdotcomajax-OLD/models/: __init__.py  api.py  devices.py  identity.py
pyalarmdotcomajax-OLD/websockets/: client.py  const.py  messages.py
pyalarmdotcomajax-OLD/websockets/handler/: __init__.py  gate.py  partition.py  sensor.py
pyalarmdotcomajax/adc/: README.md  __main__.py  adc.py  app_action.py  app_main.py  common.py  decorators.py  params.py  util.py
pyalarmdotcomajax/controllers/: __init__.py  auth.py  base.py  cameras.py  device_catalogs.py  garage_doors.py  gates.py  image_sensors.py  lights.py  locks.py  partitions.py  registry.py  sensors.py  session.py  systems.py  thermostats.py  trouble_conditions.py  users.py  water_sensors.py  water_valve.py
pyalarmdotcomajax/controllers/extensions/: __init__.py  base.py  skybell.py
pyalarmdotcomajax/devices/: __init__.py  camera.py  device_registry.py  garage_door.py  gate.py  image_sensor.py  light.py  lock.py  partition.py  registry.py  scene.py  sensor.py  system.py  thermostat.py  water_sensor.py  water_valve.py
pyalarmdotcomajax/helpers/: lenient_list.py
pyalarmdotcomajax/models/: __init__.py  api.py  auth.py  base.py  camera.py  device_catalog.py  device_const.py  devices.py  garage_door.py  gate.py  identity.py  image_sensor.py  jsonapi.py  light.py  lock.py  partition.py  sensor.py  session.py  system.py  thermostat.py  trouble_condition.py  user.py  water_sensor.py  water_valve.py
pyalarmdotcomajax/models/extensions/: __init__.py  base.py  skybell.py
pyalarmdotcomajax/models/jsonapi/: __init__.py  jsonapi.pydantic.py.txt  jsonapi_types.py  types.py  utils.py
pyalarmdotcomajax/orchestrators/: image_sensors.py
pyalarmdotcomajax/websocket/: __init__.py  client.py  messages.py
pyalarmdotcomajax/websockets/: __init__.py  client.py  const.py  messages.py
pyalarmdotcomajax/websockets/handler/: garage_door.py  gate.py  light.py  lock.py  partition.py  sensor.py  thermostat.py  water_sensor.py  water_valve.py
scripts/: setup.sh  upgrade_dependencies.py
scripts/data_model_extractor/: README.md  convert-to-python.js  scrape-ember.js
tests/: __init__.py  conftest.py  test_controller.py  test_device_extensions.py  test_no_permissions.py  test_partition.py  test_sensors.py  test_thermostat.py
tests/responses/: 2fa_otp_submit_ok.json  2fa_required.json  2fa_wrong_otp.json  404.html  __init__.py  available_systems_ok.json  camera_no_permissions.json  camera_ok.json  camera_settings_skybell.html  camera_settings_skybell_changed.html  camera_settings_skybell_missing_video_quality_field.html  device_catalog_no_partitions.json  device_catalog_ok.json  garage_door_ok.json  gate_ok.json  gates_ok.json  identities_ok.json  identity_ok.json  image_sensor_data_ok.json  image_sensor_ok.json  image_sensors_ok.json  light_ok.json  lock_ok.json  login.aspx  login_page.html  partition_ok.json  processing_error.json  recent_images_ok.json  scenes_ok.json  sensor_ok.json  system_no_partitions.json  system_ok.json  thermostat_ok.json  trouble_conditions_ok.json  unused__systems_ok.json  water_sensor_ok.json
