#
# Build System
#

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "pyalarmdotcomajax"
authors = [
    {name = "Justin Wong", email = "46082645+uvjustin@users.noreply.github.com"},
    {name = "Elahd Bar-Shai", email = "466460+elahd@users.noreply.github.com"},
]
maintainers = [{name = "Elahd Bar-Shai", email = "466460+elahd@users.noreply.github.com"}]
description = "Event Driven Python Interface for Alarm.com"
readme = "README.md"
requires-python = ">=3.11"
keywords = ["Alarm.com", "Security System", "Home Assistant"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Natural Language :: English",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Home Automation"
]
dependencies = [
    "beautifulsoup4 ~= 4.10.0",
    "aiohttp ~= 3.8.1",
    "python-dateutil ~= 2.8.2",
    "pyhumps~=3.8.0",
    "typer[all]~=0.11.0",
]
dynamic = ["version"]

[project.urls]
Repository = "https://github.com/pyalarmdotcom/pyalarmdotcomajax"

[tool.setuptools.dynamic]
version = {attr = "pyalarmdotcomajax.version.__version__"}

[project.scripts]
adc = "pyalarmdotcomajax.adc.__main__:app"



#
# Code Quality
#

[tool.mypy]
python_version = "3.11"
show_error_codes = true
ignore_missing_imports = true
strict_equality = true
warn_incomplete_stub = true
warn_redundant_casts = true
warn_unused_configs = true
warn_unused_ignores = true
check_untyped_defs = true
disallow_incomplete_defs = true
disallow_subclassing_any = true
disallow_untyped_defs = true
no_implicit_optional = true
warn_return_any = true
warn_unreachable = true
pretty = true
show_absolute_path = true
show_error_context = true
disallow_untyped_calls = false
exclude = ["tests/", "build/", ".ruff_cache/", ".mypy_cache/", "references/"]
explicit_package_bases = true

[tool.ruff]
target-version = "py311"
unfixable = [
    "F841", # Unused variables
]
exclude = ["examples", "pylint", "build", "references"]
select = [
    "B007",    # Loop control variable {name} not used within loop body
    "B014",    # Exception handler with duplicate exception
    "B006",    # Do not use mutable data structures for argument defaults
    "C",       # complexity
    "D",       # docstrings
    "E",       # pycodestyle
    "F",       # pyflakes/autoflake
    "I",       # isort
    "PL",      # pylint
    "RUF",     # ruff-specific
    "FA",      # flake-8 future annotations
    "TID",     # flake-8 tidy imports
    "SLF",     # flake-8 self
    "SIM",     # flake-8 simplify
    "ICN001",  # import concentions; {name} should be imported as {asname}
    "PGH004",  # Use specific rule codes when using noqa
    "PLC0414", # Useless import alias. Import alias does not rename original package.
    "RET",     # flake-8 return
    "S",       # Bandit
    "T20",     # flake8-print
    "TRY",     # tryceratops
    "UP",      # pyupgrade
    "W",       # pycodestyle
]
ignore = [
    "D202",    # No blank lines allowed after function docstring
    "D203",    # 1 blank line required before class docstring
    "D404",    # First word of the docstring should not be This
    "D212",    # Multi-line docstring summary should start at the first line
    "D406",    # Section name should end with a newline
    "D407",    # Section name underlining
    "E731",    # do not assign a lambda expression, use a def
    "TRY003",  # Avoid messages outside of the Exception class
    "TRY301",  # Avoid raising within a try block
    "PLR2004", # Magic values. Often triggered by aiohttp response status check.
    "PLR0913", # Too many arguments in a function call
    "PLR0912", # Too many branches
    "PLR0915", # Too many statements
    "PLR0911", # Too many return statements
    "S301",    # Bandit: Use of unsafe yaml load
    "W191",    # pycodestyle: Indentation contains tabs
    "E111",    # pycodestyle: Indentation is not a multiple of four
    "E114",    # pycodestyle: Indentation is not a multiple of four (comment)
    "E117",    # pycodestyle: Over-indented
    "D206",    # pycodestyle: Docstring should be indented with spaces, not tabs
    "Q000",    # pycodestyle: Remove bad quotes
    "Q001",    # pycodestyle: Remove bad quotes
    "Q002",    # pycodestyle: Remove bad quotes
    "Q003",    # pycodestyle: Remove bad quotes
    "COM812",  # pycodestyle: Missing trailing comma
    "COM819",  # pycodestyle: Prohibited trailing comma
    "ISC001",  # pycodestyle: Single line implicit string concatenation
    "ISC002",  # pycodestyle: Multi line implicit string concatenation
    "E501",    # pycodestyle: Line too long
    # "D300",    # pycodestyle: Use """triple double quotes"""
    "TRY400",  # tryceratops: Use logging.exception instead of logging.error
]
line-length = 115
extend-safe-fixes = [
    # Disabled for Typer support.
    # "UP007", # pyupgrade: Use | instead of Union, | None instead of Optional.
    "UP006", # pyupgrade: Use list (and others) from standard library instead of typing.
]

[tool.ruff.flake8-pytest-style]
fixture-parentheses = false

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.mccabe]
max-complexity = 25

[tool.codespell]
# Remove jsonapi.py when https://github.com/codespell-project/codespell/issues/1212 is closed.
skip = "./.*,*.csv,*.json,*.html,*.aspx,tests/test_device_extensions.py,pyalarmdotcomajax/models/jsonapi/*"
count = ''
quiet-level=2
ignore-words-list="hass,alot,datas,dof,dur,farenheit,hist,iff,ines,ist,lightsensor,mut,nd,pres,referer,ser,serie,te,technik,ue,uint,visability,wan,wanna,withing,windo"

