[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "pyalarmdotcomajax"
description = "Event Driven Python Interface for Alarm.com"
requires-python = ">=3.11,<3.13"
authors = [
    {name = "Justin Wong", email = "46082645+uvjustin@users.noreply.github.com"},
    {name = "Elahd Bar-Shai", email = "466460+elahd@users.noreply.github.com"}
]
maintainers = [
    {name = "Elahd Bar-Shai", email = "466460+elahd@users.noreply.github.com"}
]
readme = "README.md"
keywords = ["Alarm.com", "Security System", "Home Assistant"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Natural Language :: English",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Home Automation"
]
dynamic = ["version", "dependencies", "optional-dependencies"]

[project.scripts]
adc = "pyalarmdotcomajax.adc.adc:app"

[project.urls]
Repository = "https://github.com/pyalarmdotcom/pyalarmdotcomajax"

[tool.codespell]
skip = "./.*,*.csv,*.json,*.html,*.aspx,tests/test_device_extensions.py,pyalarmdotcomajax/models/jsonapi/*"
count = ""
quiet-level = 2
ignore-words-list = "hass,alot,datas,dof,dur,farenheit,hist,iff,ines,ist,lightsensor,mut,nd,pres,referer,ser,serie,te,technik,ue,uint,visability,wan,wanna,withing,windo"

[tool.mypy]
exclude = [
    "tests/",
    "build/",
    ".ruff_cache/",
    ".mypy_cache/",
    "references/",
    ".pytest_cache"
]
python_version = "3.11"
show_error_codes = true
ignore_missing_imports = true
strict_equality = true
warn_incomplete_stub = true
warn_redundant_casts = true
warn_unused_configs = true
warn_unused_ignores = true
check_untyped_defs = true
disallow_incomplete_defs = true
disallow_subclassing_any = false
disallow_untyped_defs = true
no_implicit_optional = true
warn_return_any = true
warn_unreachable = true
pretty = true
show_absolute_path = true
show_error_context = true
disallow_untyped_calls = false
explicit_package_bases = true

[tool.ruff]
target-version = "py311"
exclude = [
    "examples",
    "build",
    "references",
    ".ruff_cache/",
    ".mypy_cache/",
    ".pytest_cache",
    "**/_version.py"
]
line-length = 115
respect-gitignore = true

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = true

[tool.ruff.lint]
ignore = [
    "D202",
    "D203",
    "D404",
    "D212",
    "D406",
    "D407",
    "E731",
    "TRY003",
    "TRY301",
    "PLR2004",
    "PLR0913",
    "PLR0912",
    "PLR0915",
    "PLR0911",
    "S301",
    "W191",
    "E111",
    "E114",
    "E117",
    "D206",
    "Q000",
    "Q001",
    "Q002",
    "Q003",
    "COM812",
    "COM819",
    "ISC001",
    "ISC002",
    "E501",
    "TRY400",
    "D107",
    "TD002",
    "TD003",
    "TCH003",
    "TCH002"
]
unfixable = ["F841"]
select = [
    "A",
    "ASYNC",
    # "B007",
    # "B014",
    # "B006",
    "B",
    "C",
    "D",
    "E",
    # "ERA001",
    "F",
    "I",
    "G",
    "PL",
    "RUF",
    "FA",
    "FBT",
    "TID",
    "SLF",
    "SIM",
    "ICN001",
    "PGH004",
    "PLC0414",
    "RET",
    "S",
    "LOG",
    "PERF",
    # "FURB",
    "PIE",
    "ICN",
    "TCH",
    "TD",
    "T20",
    "PT",
    "Q",
    "YTT",
    "TRY",
    "UP",
    "W"
]
extend-safe-fixes = ["UP006"]

[tool.ruff.lint.flake8-builtins]
builtins-ignorelist = ["id", "type"]

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.lint.flake8-type-checking]
quote-annotations = true

[tool.ruff.lint.flake8-unused-arguments]
ignore-variadic-names = true

[tool.ruff.lint.mccabe]
max-complexity = 25

[tool.setuptools.dynamic]
dependencies = {file = "requirements.txt"}
optional-dependencies.dev = {file = "requirements-dev.txt"}

[tool.setuptools.dynamic.version]
attr = "pyalarmdotcomajax._version.__version__"

[tool.setuptools_scm]
version_file = "pyalarmdotcomajax/_version.py"

[tool.tomlsort]
in_place = true
spaces_before_inline_comment = 4
spaces_indent_inline_array = 4
trailing_comma_inline_array = false
