[metadata]
name = pyalarmdotcomajax
description = Python Interface for Alarm.com
author = Justin Wong
author_email = 46082645+uvjustin@users.noreply.github.com
maintainer = Justin Wong, Elahd Bar-Shai, Kevin David
maintainer_email = 46082645+uvjustin@users.noreply.github.com, 466460+elahd@users.noreply.github.com
version = attr: pyalarmdotcomajax.__version__
long_description = file: README.md, LICENSE
long_description_content_type = text/markdown
url = https://github.com/pyalarmdotcom/pyalarmdotcomajax
keywords = Alarm.com, Security System, Home Assistant
license = MIT
license_files = LICENSE
classifiers =
    Development Status :: 4 - Beta
    Natural Language :: English
    Environment :: Web Environment
    Intended Audience :: Developers
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Home Automation

[options]
zip_safe = True
include_package_data = True
packages = find:
python_requires = >=3.9
install_requires =
    beautifulsoup4 >= 4.10.0
    aiohttp >= 3.8.1
    python-dateutil >= 2.8.2
    termcolor >= 2.1.1

[options.entry_points]
console_scripts =
    adc = pyalarmdotcomajax.cli:main
